--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -22,7 +22,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt  # Ensure you have a requirements.txt
-        
+        pip install --target="./.python_packages/lib/site-packages" -r requirements.txt
+
     - name: Set Application Insights Key
       run: echo "APPINSIGHTS_INSTRUMENTATIONKEY=${{ secrets.APPINSIGHTS_INSTRUMENTATIONKEY }}" >> $GITHUB_ENV
 
